--- a/index.html
+++ b/index.html
@@ -3,194 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <title>Print Layout Manager</title>
-    <style>
-        body {
-            font-family: 'Adobe Clean', sans-serif;
-            margin: 0;
-            padding: 10px;
-            background-color: #2a2a2a;
-            color: #e0e0e0;
-        }
-
-        .container {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-
-        .controls {
-            display: flex;
-            flex-direction: column;
-            gap: 8px;
-            padding: 10px;
-            background: #3a3a3a;
-            border-radius: 4px;
-        }
-
-        button {
-            padding: 10px 15px;
-            background: #1473E6;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 13px;
-            font-weight: 500;
-        }
-
-        button:hover {
-            background: #0d66d0;
-        }
-
-        button.secondary {
-            background: #505050;
-        }
-
-        button.secondary:hover {
-            background: #606060;
-        }
-
-        .file-info {
-            padding: 8px;
-            background: #404040;
-            border-radius: 4px;
-            font-size: 12px;
-            color: #b0b0b0;
-        }
-
-        .prints-list {
-            display: flex;
-            flex-direction: column;
-            gap: 8px;
-            max-height: 500px;
-            overflow-y: auto;
-        }
-
-        .print-item {
-            display: grid;
-            grid-template-columns: 60px 1fr;
-            gap: 10px;
-            padding: 10px;
-            background: #3a3a3a;
-            border-radius: 4px;
-            cursor: pointer;
-            border: 2px solid transparent;
-            transition: all 0.2s;
-        }
-
-        .print-item:hover {
-            background: #454545;
-        }
-
-        .print-item.selected {
-            border-color: #1473E6;
-            background: #2a3f5f;
-        }
-
-        .print-thumbnail {
-            width: 60px;
-            height: 60px;
-            background: #505050;
-            border-radius: 4px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 10px;
-            color: #888;
-            overflow: hidden;
-        }
-
-        .print-thumbnail img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-
-        .print-info {
-            display: flex;
-            flex-direction: column;
-            gap: 4px;
-        }
-
-        .print-info-row {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            font-size: 12px;
-        }
-
-        .print-label {
-            color: #888;
-            font-weight: 500;
-        }
-
-        .print-value {
-            color: #e0e0e0;
-        }
-
-        .size-input {
-            width: 80px;
-            padding: 4px 8px;
-            background: #505050;
-            border: 1px solid #606060;
-            border-radius: 3px;
-            color: #e0e0e0;
-            font-size: 11px;
-        }
-
-        .size-input:focus {
-            outline: none;
-            border-color: #1473E6;
-        }
-
-        .status {
-            padding: 8px;
-            background: #404040;
-            border-radius: 4px;
-            font-size: 11px;
-            color: #b0b0b0;
-            text-align: center;
-        }
-
-        .error {
-            background: #5a2a2a;
-            color: #ff6b6b;
-        }
-
-        .success {
-            background: #2a5a2a;
-            color: #6bff6b;
-        }
-
-        ::-webkit-scrollbar {
-            width: 8px;
-        }
-
-        ::-webkit-scrollbar-track {
-            background: #2a2a2a;
-        }
-
-        ::-webkit-scrollbar-thumb {
-            background: #505050;
-            border-radius: 4px;
-        }
-
-        ::-webkit-scrollbar-thumb:hover {
-            background: #606060;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <div class="controls">
-            <button id="loadXlsxBtn">Загрузить XLSX таблицу</button>
-            <button id="runScriptBtn" class="secondary">Запустить скрипт раскладки</button>
-            <div id="fileInfo" class="file-info" style="display: none;"></div>
-        </div>
+        <header>
+            <h1>Print Layout Manager</h1>
+        </header>
 
-        <div id="printsList" class="prints-list"></div>
+        <!-- Секция загрузки таблицы -->
+        <section class="upload-section">
+            <button id="loadXlsxBtn" class="primary-btn">📂 Загрузить XLSX таблицу</button>
+            <div id="fileInfo" class="file-info hidden">
+                <span id="fileName">Файл не загружен</span>
+                <button id="clearFileBtn" class="secondary-btn small-btn">✕</button>
+            </div>
+        </section>
 
-        <div id="status" class="status" style="display: none;"></div>
+        <!-- Секция вызова скрипта -->
+        <section class="script-section">
+            <button id="runScriptBtn" class="secondary-btn" disabled>▶️ Запустить раскладку</button>
+            <p class="hint">Сначала загрузите таблицу для активации</p>
+        </section>
+
+        <!-- Список принтов -->
+        <section class="prints-section">
+            <h2>Принты на холсте <span id="printCount" class="count">0</span></h2>
+            <div class="search-box">
+                <input type="text" id="searchInput" placeholder="Поиск по артикулу...">
+            </div>
+            <div id="printsList" class="prints-list">
+                <!-- Динамически генерируемый список -->
+            </div>
+        </section>
+
+        <!-- Детали выбранного принта -->
+        <section id="printDetails" class="details-section hidden">
+            <h3>Детали принта</h3>
+            <div class="detail-row">
+                <div class="detail-mockup" id="detailMockup">
+                    <img src="" alt="Мокап" id="mockupImage" class="mockup-placeholder">
+                </div>
+            </div>
+            <div class="detail-row">
+                <label>Артикул:</label>
+                <span id="detailArticle" class="detail-value">-</span>
+            </div>
+            <div class="detail-row">
+                <label>Размер:</label>
+                <span id="detailSize" class="detail-value">-</span>
+            </div>
+            <div class="detail-row">
+                <label>Цвет:</label>
+                <span id="detailColor" class="detail-value">-</span>
+            </div>
+            <div class="detail-row">
+                <label>Физический размер (мм):</label>
+                <div class="size-inputs">
+                    <input type="number" id="physicalWidth" class="size-input" placeholder="Ширина" step="0.1" min="0">
+                    <span>×</span>
+                    <input type="number" id="physicalHeight" class="size-input" placeholder="Высота" step="0.1" min="0">
+                </div>
+            </div>
+            <div class="detail-row">
+                <button id="applySizeBtn" class="primary-btn">Применить размер</button>
+            </div>
+        </section>
+
+        <!-- Статус бар -->
+        <footer class="status-bar">
+            <span id="statusText">Готов к работе</span>
+        </footer>
     </div>
 
     <script src="lib/xlsx.full.min.js"></script>
